--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "resend": "^3.4.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
