--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "framer-motion": "^11.2.13",
     "next": "14.2.3",
     "react": "^18",
